# ThunderOMLX

./: .gitignore  AB_FIX_VERIFICATION.json  ASYNC_CACHE_IO_DESIGN.md  ASYNC_PREFETCH_FIX_VERIFICATION.json  BASELINE_CONDITION_VERIFICATION.md  BENCHMARK_PROFILING_ANALYSIS.md  BENCHMARK_RESULTS_OMLX_ADMIN.md  BENCHMARK_SUMMARY_2026-03-15_FINAL.md  CACHE_COMPARISON.md  CHANGELOG_P2.md  CHUNKED_PREFILL_FIX_SUMMARY.md  CHUNKED_PREFILL_MANIFEST.md  CHUNKED_PREFILL_TEST_REPORT.md  CONTEXTPILOT_PREFILL_ANALYSIS.md  DEBUG_REPORT.json  DELIVERY_CHECKLIST.md  DISABLE_COMPRESSION_TEST.md  FINAL_BENCHMARK_RESULTS.json  FINAL_CONFIGURATION_GUIDE.md  GITHUB_HOMEPAGE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_SUMMARY.md  METAL_FIX_VERIFICATION.json  MODEL_BENCHMARK_RESULTS.json  NEXT_STEPS.md  OPENCLAW_INTEGRATION_GUIDE.md  P04_COMPRESSION_SUMMARY.md  P1_5_COMPLETION_SUMMARY.md  P1_6_CHECKSUM_DESIGN.md  P1_6_COMPLETION_SUMMARY.md  P1_7_ADAPTIVE_CHUNK_DESIGN.md  P1_7_COMPLETION_SUMMARY.md  P1_FINAL_SUMMARY.md  P1_PERFORMANCE_ANALYSIS.md  P1_PHASE_COMPLETION.md  P1_SMART_PREFETCH_DESIGN.md  P3_1_COMPLETION_SUMMARY.md  P3_1_FEATURE_FLAG_USAGE.md  P3_1_FINAL_SUMMARY.md  (+232 more)
.solar/: ADAPTIVE_CACHE_OPTIMIZER_DESIGN.md  ADAPTIVE_CACHE_OPTIMIZER_PHASE1_COMPLETE.md  BLOCK_SIZE_32_ANALYSIS.md  BLOCK_SIZE_PERFORMANCE_COMPARISON.md  CONTEXTPILOT_PHASE2_BASELINE.md  LZ4_OPTIMIZATION_SUMMARY.md  METAL_CONCURRENT_FIX.md  OPENCLAW_MULTI_AGENT_STRATEGY.md  OPENCLAW_REAL_DATA_ANALYSIS.md  P0-3_HYBRID_HASHING_COMPLETE.md  (+42 more)
src/omlx/extensions/: CMakeLists.txt  tensor_loader.cpp
(+256 files in other folders)
